Side panel development